--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -163,6 +163,9 @@ android {
 
 }
 dependencies {
+    implementation project(':react-native-exception-handler')
+    implementation project(':react-native-config')
+    implementation project(':rollbar-react-native')
     implementation project(':react-native-firebase')
     implementation project(':react-native-push-notification')
     implementation project(':react-native-linear-gradient')
