--- a/ios/Podfile
+++ b/ios/Podfile
@@ -42,9 +42,44 @@ target 'wild5' do
   pod 'Firebase/Auth', '~> 6.3.0'
   pod 'Firebase/Database', '~> 6.3.0'
 
+  pod 'RollbarReactNative', :path => '../node_modules/rollbar-react-native'
+  pod 'react-native-config', :path => '../node_modules/react-native-config'
+
+  pod 'ReactNativeExceptionHandler', :path => '../node_modules/react-native-exception-handler'
+
   target 'wild5Tests' do
     inherit! :search_paths
     # Pods for testing
+  end
+
+  post_install do |installer|
+    installer.pods_project.targets.each do |target|
+
+      # The following is needed to ensure the "archive" step works in XCode.
+      # It removes React & Yoga from the Pods project, as it is already included in the main project.
+      # Without this, you'd see errors when you archive like:
+      # "Multiple commands produce ... libReact.a"
+      # "Multiple commands produce ... libyoga.a"
+
+      # targets_to_ignore = %w(React yoga)
+
+      # if targets_to_ignore.include? target.name
+      #   target.remove_from_project
+      # end
+
+      if target.name == 'react-native-config'
+        phase = target.project.new(Xcodeproj::Project::Object::PBXShellScriptBuildPhase)
+        phase.shell_script = "cd ../../"\
+                             " && RNC_ROOT=./node_modules/react-native-config/"\
+                             " && export SYMROOT=$RNC_ROOT/ios/ReactNativeConfig"\
+                             " && export BUILD_DIR=$RNC_ROOT/ios/ReactNativeConfig"\
+                             " && ruby $RNC_ROOT/ios/ReactNativeConfig/BuildDotenvConfig.ruby"
+  
+        target.build_phases << phase
+        target.build_phases.move(phase,0)
+      end
+
+    end
   end
 
 end
