--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "react-native": "0.60.3",
     "react-native-animate-number": "0.1.2",
     "react-native-chart-kit": "3.2.1",
+    "react-native-config": "0.11.7",
     "react-native-datepicker": "1.7.2",
     "react-native-elements": "1.1.0",
+    "react-native-exception-handler": "2.10.8",
     "react-native-firebase": "^5.5.6",
     "react-native-linear-gradient": "2.5.4",
     "react-native-modal": "11.0.2",
@@ -33,6 +35,7 @@
     "react-native-svg-charts": "5.2.0",
     "react-native-typography": "1.4.1",
     "react-native-vector-icons": "6.6.0",
+    "rollbar-react-native": "0.5.0",
     "toggle-switch-react-native": "2.0.2",
     "victory": "32.2.3",
     "victory-native": "32.0.2"
